Bing/examples/bad/01-04-simple.bing
# 01 (trzy typy) +
# 02 (literały, arytmetyka, porównania) +
# 03 (zmienne, przypisanie) +
# 04 (print) +


// int

void main1 () {
    int a = 1;
    int b = 2;
    int c = 3;
    int d = a * b + c;
    c = True; # Wrong type
    println(d);
    println(c);
}

// int + bool

void main2() {
    int a = 1;
    int b = 2;
    int c = 3;
    int d = a * b + c;
    bool var_true = True;

    if (a <= 2) {
        println(a);
    } elif (b % 3) { # does not evaluate to bool
        println(b);
    } else {
        println(c);
    }

    println(d);
    println(var_true);
}

// string

void main3() {
    string s = "abc";
    s = s + "a"; # string does not support contacenation
    println(s);
}

void main4() {
    int a = "strrrring";
    println(a);
}
 
void main() {
    main4();
    main3();
    main2();
    main1();
}